# esp32-px4-actuator-controller

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini
.github/workflows/: platformio.yml
include/: config_store.h  motor_stats.h  web_config.h  web_page.h
lib/: README
lib/config_store/: CMakeLists.txt  README.md  config_store.h
lib/encoder_read/: CMakeLists.txt  README.md  encoder_read.c  encoder_read.h
lib/motor_drive/: CMakeLists.txt  README.md  motor_drive.c  motor_drive.h
lib/pid/: README.md  pid.c  pid.h
lib/pwm_out/: CMakeLists.txt  README.md  pwm_out.c  pwm_out.h
lib/pwm_read/: CMakeLists.txt  README.md  pwm_read.c  pwm_read.h
src/: CMakeLists.txt  config_store.c  main.c  motor_stats.c  web_config.c
